crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaGatewayPacket PamojaGatewayPacket;
typedef struct PamojaGatewayUplink PamojaGatewayUplink;
typedef struct {
  uint32_t bandwidth_hz;
  uint16_t preamble_symbols;
  uint8_t spreading_factor;
  uint8_t coding_rate_denominator;
  uint8_t explicit_header;
  uint8_t crc;
} PamojaLoraLink;
typedef struct {
  uint64_t received_at_us;
  uint64_t gps_millis;
  uint32_t frequency_hz;
  uint32_t timestamp_us;
  PamojaLoraLink link;
  uint32_t bitrate_bps;
  int32_t rssi_centi_dbm;
  int32_t snr_centi_db;
  uint8_t channel;
  uint8_t rf_chain;
  int8_t crc;
  uint8_t modulation;
  bool has_received_at;
  bool has_gps_millis;
  bool has_timestamp;
  bool has_snr;
} PamojaGatewayRxpk;
typedef struct {
  uint64_t time_s;
  double latitude_deg;
  double longitude_deg;
  double acknowledged_percent;
  int32_t altitude_m;
  uint32_t received;
  uint32_t received_ok;
  uint32_t forwarded;
  uint32_t downlinks;
  uint32_t transmitted;
  bool has_time;
  bool has_position;
  bool has_altitude;
} PamojaGatewayStat;
typedef struct {
  uint64_t gps_millis;
  uint32_t frequency_hz;
  uint32_t timestamp_us;
  PamojaLoraLink link;
  uint32_t bitrate_bps;
  uint32_t frequency_deviation_hz;
  uint16_t preamble_symbols;
  uint8_t rf_chain;
  int8_t power_dbm;
  uint8_t modulation;
  bool immediate;
  bool invert_polarity;
  bool without_crc;
  bool has_timestamp;
  bool has_gps_millis;
  bool has_deviation;
  bool has_preamble;
} PamojaGatewayTxpk;
PamojaGatewayUplink *pamoja_gateway_uplink_new(void);
PamojaStatus pamoja_gateway_uplink_add_rxpk(PamojaGatewayUplink *uplink,
                                            PamojaGatewayRxpk packet,
                                            const uint8_t *payload,
                                            uintptr_t payload_len);
PamojaStatus pamoja_gateway_uplink_set_stat(PamojaGatewayUplink *uplink, PamojaGatewayStat status);
void pamoja_gateway_uplink_free(PamojaGatewayUplink *uplink);
PamojaStatus pamoja_gateway_push_data(uint16_t token,
                                      const uint8_t *gateway,
                                      PamojaGatewayUplink *uplink,
                                      PamojaGatewayPacket **out_packet);
PamojaGatewayPacket *pamoja_gateway_push_ack(uint16_t token);
PamojaStatus pamoja_gateway_pull_data(uint16_t token,
                                      const uint8_t *gateway,
                                      PamojaGatewayPacket **out_packet);
PamojaGatewayPacket *pamoja_gateway_pull_ack(uint16_t token);
PamojaStatus pamoja_gateway_pull_resp(uint16_t token,
                                      PamojaGatewayTxpk transmit,
                                      const uint8_t *payload,
                                      uintptr_t payload_len,
                                      PamojaGatewayPacket **out_packet);
PamojaStatus pamoja_gateway_tx_ack(uint16_t token,
                                   const uint8_t *gateway,
                                   uint8_t status,
                                   PamojaGatewayPacket **out_packet);
PamojaStatus pamoja_gateway_packet_parse(const uint8_t *bytes,
                                         uintptr_t len,
                                         PamojaGatewayPacket **out_packet);
uint8_t pamoja_gateway_packet_kind(const PamojaGatewayPacket *packet);
uint16_t pamoja_gateway_packet_token(const PamojaGatewayPacket *packet);
bool pamoja_gateway_packet_gateway(const PamojaGatewayPacket *packet, uint8_t *out_gateway);
uintptr_t pamoja_gateway_packet_rxpk_count(const PamojaGatewayPacket *packet);
bool pamoja_gateway_packet_rxpk(const PamojaGatewayPacket *packet,
                                uintptr_t index,
                                PamojaGatewayRxpk *out_rxpk);
const uint8_t *pamoja_gateway_packet_rxpk_payload(const PamojaGatewayPacket *packet,
                                                  uintptr_t index);
uintptr_t pamoja_gateway_packet_rxpk_payload_len(const PamojaGatewayPacket *packet,
                                                 uintptr_t index);
bool pamoja_gateway_packet_stat(const PamojaGatewayPacket *packet, PamojaGatewayStat *out_stat);
bool pamoja_gateway_packet_txpk(const PamojaGatewayPacket *packet, PamojaGatewayTxpk *out_txpk);
const uint8_t *pamoja_gateway_packet_txpk_payload(const PamojaGatewayPacket *packet);
uintptr_t pamoja_gateway_packet_txpk_payload_len(const PamojaGatewayPacket *packet);
uint8_t pamoja_gateway_packet_tx_status(const PamojaGatewayPacket *packet);
bool pamoja_gateway_packet_acknowledgment(const PamojaGatewayPacket *packet,
                                          PamojaGatewayPacket **out_packet);
PamojaBuffer *pamoja_gateway_packet_to_buffer(const PamojaGatewayPacket *packet);
void pamoja_gateway_packet_free(PamojaGatewayPacket *packet);